--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1503,6 +1503,8 @@ items:
         href: deploy-apps-microsoft-teams-landing-page.md
       - name: 'Управление приложениями, предоставленными корпорацией Майкрософт'
         items:
+          - name: Управление приложением Администратор
+            href: manage-admin-app.md
           - name: Управление приложением Bookings
             href: bookings-app-admin.md
           - name: Управление приложением Lists
