--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -867,6 +867,12 @@ items:
                 href: operator-connect-plan.md
               - name: Настройка Operator Connect
                 href: operator-connect-configure.md
+          - name: Operator Connect Mobile
+            items:
+              - name: Планирование Operator Connect Mobile
+                href: operator-connect-mobile-plan.md
+              - name: Настройка Operator Connect Mobile
+                href: operator-connect-mobile-configure.md
           - name: Прямая маршрутизация
             items:
               - name: Новые возможности
@@ -977,6 +983,8 @@ items:
                 href: phone-number-calling-plans/supported-rate-centers-coverage-matrix.md
           - name: Управление номерами телефонов для Operator Connect
             href: operator-connect-configure.md#set-up-phone-numbers
+          - name: Управление номерами телефонов для Operator Connect Mobile
+            href: operator-connect-mobile-configure.md#set-up-phone-numbers
           - name: Управление номерами телефонов для прямой маршрутизации
             href: direct-routing-enable-users.md#configure-the-phone-number-and-enable-enterprise-voice
           - name: Лицензирование и управление телефонными номерами
@@ -1321,6 +1329,10 @@ items:
             items:
               - name: Обзор планирования комнат Microsoft Teams
                 href: rooms/rooms-plan.md
+              - name: Общие сведения о Комнаты Teams лицензирования
+                href: rooms/rooms-licensing.md
+              - name: Комнаты Teams центра администрирования
+                href: rooms/admin-center-license-overview.md
               - name: Сравнение функций устройств Teams между Windows и Android
                 href: rooms/teams-devices-feature-comparison.md
               - name: Руководство по комнате собраний для Teams
@@ -1335,8 +1347,6 @@ items:
                 href: rooms/requirements.md
               - name: Безопасность
                 href: rooms/security.md
-              - name: Интернет-лицензирование
-                href: rooms/rooms-licensing.md
               - name: Планирование управления с помощью Azure Monitor
                 href: rooms/azure-monitor-plan.md
           - name: Развертывание
