--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1585,8 +1585,10 @@ items:
             href: customize-your-app-store.md
           - name: Управление доступом к приложениям в Microsoft 365
             href: manage-third-party-teams-apps.md
-          - name: Поведение приложений в зависимости от типов пользователей
+          - name: Поведение приложения для внешних пользователей
             href: non-standard-users.md
+          - name: Управление запросами пользователей для разрешения приложений
+            href: user-requests-approve-apps.md
           - name: Обновления приложений и роль администратора
             href: apps-update-experience.md
           - name: Аудит действий управления приложениями
